config salary